<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="androidx.lifecycle.LiveData" />

        <import type="com.oscarliang.knews.util.Resource" />

        <import type="com.oscarliang.knews.util.State" />

        <import type="java.util.List" />

        <import type="com.oscarliang.knews.model.News" />

        <variable
            name="listener"
            type="com.oscarliang.knews.ui.common.RetryListener" />

        <variable
            name="news"
            type="LiveData&lt;Resource&lt;List&lt;News>>>" />
    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:onRefreshListener="@{() -> listener.retry()}"
        app:refreshHide="@{news.state == State.LOADING}">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/news_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="LinearLayoutManager" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmer_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shimmer_auto_start="true"
                app:showHide="@{news.state == State.LOADING &amp;&amp; news.data.size() == 0}">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <include layout="@layout/layout_news_item_shimmer" />

                    <include layout="@layout/layout_news_item_shimmer" />

                </LinearLayout>

            </com.facebook.shimmer.ShimmerFrameLayout>

            <include
                android:id="@+id/layout_error_state"
                layout="@layout/layout_error_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:listener="@{listener}"
                app:resource="@{news}" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</layout>