...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/RoundedRectangle"
                tool:src="@tools:sample/backgrounds/scenic" />

            <ImageButton
                android:id="@+id/btn_bookmark"
                android:layout_width="@dimen/btn_bookmark_width"
                android:layout_height="@dimen/btn_bookmark_width"
                android:background="@{news.bookmark ? @drawable/ic_bookmark : @drawable/ic_bookmark_border}"
                android:backgroundTint="@{news.bookmark ? @color/purple_500 : @color/white}"
                app:layout_constraintEnd_toEndOf="@+id/image_news"
                app:layout_constraintTop_toTopOf="@+id/image_news"
...
